# sigui2

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: ROADMAP.md
docs/developer_notes/: curation_model.md  frontend_deckgl_gotchas.md  phase0_findings.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  SiguiContext.tsx  colormap.ts  densityView.ts  frame.ts  gainControl.ts  heatmapView.ts  histogramGridView.ts  keybindings.ts  main.tsx  panels.tsx  probeView.ts  scatterView.ts  socket.ts  traceView.ts  tracemapView.ts  types.ts  unitCache.ts  waveformView.ts  worker.ts
frontend/src/components/: DensityPane.tsx  GainControl.tsx  HeatmapPane.tsx  HistogramPane.tsx  ProbePane.tsx  ScatterPane.tsx  SettingsPanel.tsx  SpikelistPane.tsx  TimeNav.tsx  TracePane.tsx  TracemapPane.tsx  UnitList.tsx  UnitListView.tsx  UnitTable.tsx  WaveformPane.tsx  paneStyles.ts
frontend/uxtest/: curationkeys.mjs  keybindings.mjs  mainsettings.mjs  multiwin.mjs  picksync.mjs  segtime.mjs  selsync.mjs  settings.mjs  snap.mjs
sigui2/: __init__.py  cli.py  testing.py
sigui2/bench/: phase0_bandwidth.py
sigui2/server/: __init__.py  app.py  encode.py  protocol.py  schema.py  session.py  view_settings.py
sigui2/server/lod/: __init__.py  scatter.py  traces.py
sigui2/tests/: test_lod.py  test_main_settings.py  test_protocol.py  test_view_settings.py
